# csrenetsindex

./: .gitignore  Cargo.toml  build.rs  docker-compose.yml  top-3000.html
migrations/: create-pizza-db.sql
src/: config.rs  controller.rs  main.rs  pwgen.rs  routes.rs  uriscraper.rs
templates/: passwords.html  pizzas.html
