[package]
name = "csrenetsindex"
version = "0.1.0"
authors = ["csrene <renecoutoesilva@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version="0.7", features=["ssl"] }
actix = "0.7"
futures = "0.1.25"
scraper = "0.9.1"
rand = "0.6.4"
random_choice = "0.3.2"
postgres = "0.15.2"
env_logger = "0.5"
askama = "0.6"
dotenv = "0.13.0"
serde_derive = "1.0.87"
serde = "1.0.87"

[build-dependencies]
askama = "0.6"